# kaos

./: .env.example  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  bootstrap_kaos.py  dockerfile  pyproject.toml
docker/: Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEMO.md  QUICKSTART.md  ROADMAP.md
docs/adr/: ADR-0001.md  ADR-0002.md  ADR-0003.md  ADR-0004.md  ADR-0005.md  ADR-0006.md  ADR-0007.md  ADR-0008.md  ADR-0009.md  ADR-0010.md  ADR-0011.md  ADR-0012.md  ADR-0013.md  ADR-0014.md  ADR-0015.md  ADR-0016.md  ADR-0017.md  ADR-0018.md  ADR-0019.md  ADR-0020.md  ADR-0021.md  ADR-0022.md  ADR-0023.md
docs/dev/: KAOS-History.md  dev-agent-20260716.md
docs/rfc/: RFC-0001.md
project/backlog/: EPIC-001-KDK.md  EPIC-002-Beta-Launch.md
project/milestones/: M0-Foundation.md  M1-BetaLaunch.md
scripts/: demo.ps1  dev.ps1  first_commit.txt
src/kaos/bootstrap/: __init__.py  factory.py
src/kaos/cli/: backfill.py  copilot.py  dev.py  github.py  knowledge.py  (+5 more)
templates/agent/: agent.py.tmpl  test_agent.py.tmpl
templates/connector/: connector.py.tmpl  test_connector.py.tmpl
templates/publisher/: publisher.py.tmpl  test_publisher.py.tmpl
tests/: test_agents_catalog.py  test_artifact_thread.py  test_backfill_cli.py  test_cache.py  test_channel_names.py  test_chat_knowledge.py  test_cli_scaffold.py  test_config.py  test_console.py  test_contracts.py  test_copilot.py  test_dashboard_app.py  test_dev_agent.py  test_discord_backfill.py  test_discord_connector.py  test_discord_gateway.py  test_discord_publisher.py  test_factory.py  test_forum_discovery.py  test_github_connector.py  test_knowledge.py  test_openai_provider.py  test_postgres_storage.py  test_providers.py  test_redaction.py  test_resume_agent.py  test_runtime.py  test_scheduler.py  test_subscriptions.py  test_task_agent.py  test_up_demo.py
(+71 files in other folders)
