[project]
name="kaos"
version="1.0.0b1"
requires-python=">=3.13"
description="KAOS — Knowledge Analysis & Orchestration System"
readme="README.md"
license={text="MIT"}
classifiers=[
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
]
dependencies=[
    "fastapi>=0.115",
    "pydantic>=2.9",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev=[
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=9.0.3",
]
discord=[
    "discord.py>=2.4",
]
postgres=[
    "asyncpg>=0.29",
]
dashboard=[
    "uvicorn>=0.30",
]

[project.scripts]
kaos="kaos.cli.main:main"

[build-system]
requires=["setuptools>=69"]
build-backend="setuptools.build_meta"

[tool.setuptools]
package-dir={""="src"}

[tool.setuptools.package-data]
kaos=["py.typed"]

[tool.setuptools.packages.find]
where=["src"]

[tool.ruff]
line-length=100
target-version="py313"
src=["src", "tests"]

[tool.ruff.lint]
select=["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's Body/Query/Depends in defaults is the intended pattern (not B008).
extend-immutable-calls=["fastapi.Body", "fastapi.Query", "fastapi.Depends"]

[tool.ruff.lint.per-file-ignores]
# Embedded frontend assets (HTML/CSS/JS strings) legitimately exceed the limit.
"src/kaos/plugins/dashboard/console.py"=["E501"]
"src/kaos/plugins/dashboard/__init__.py"=["E501"]
# Agent prompts are long text; reasonable to keep together.
"src/kaos/plugins/agents/task_agent.py"=["E501"]
# Tests favour readable, unwrapped assertions/fixtures.
"tests/*"=["E501"]

[tool.mypy]
python_version="3.13"
strict=true
packages=["kaos"]
mypy_path="src"

[[tool.mypy.overrides]]
# asyncpg ships no type stubs / py.typed marker.
module=["asyncpg", "asyncpg.*"]
ignore_missing_imports=true

[tool.pytest.ini_options]
testpaths=["tests"]
pythonpath=["src"]

